[package]
name = "m3u8-downloader"
version = "0.1.0"
edition = "2024"
authors = ["blueokanna@gmail.com"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
reqwest = { version = "0.12.23", features = ["json", "stream", "gzip", "brotli", "deflate"] }
m3u8-rs = "6.0.0"
aes = { version = "0.7.5" }
block-modes = { version = "0.8.1" }
hex = "0.4.3"
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0.100"
indicatif = "0.18.0"
url = "2.5.7"